--- a/css/styles.scss
+++ b/css/styles.scss
@@ -55,8 +55,14 @@ header h4 {
   color: $color-pale;
 }
 
-.img-fluid {
-  max-width: 120%;
+.img-thumbnail {
+  max-width:25%;
+  border: none; 
+}
+@media only screen and (max-width: 768px) {
+  .img-thumbnail{
+    max-width: 75%;
+  }
 }
 
 .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
@@ -94,6 +100,12 @@ header h4 {
 
 .carousel-caption {
   background-color: $color-black-transparent;
+}
+
+@media only screen and (max-width: 768px) {
+  .carousel-caption h3, .carousel-caption p {
+    font-size: large;
+  }
 }
 
 div.carousel-item.active{
@@ -147,13 +159,11 @@ div.carousel-item.active{
 }
 
 .import, .export {
-    padding: 3rem 0 0 0; 
+    padding: 3rem 2rem; 
     margin: auto; 
 }
 
-.carousel-control-prev-icon, .carouse-control.next-icon {
-    color: #053769;
-}
+
 
 .contact-form, .top-page {
   background-color: $color-pale;
@@ -183,3 +193,4 @@ div.info {
   line-height: 0.5rem;
   padding: 3rem 0 0 0;
 }
+
